# safeheap

./: .clangd  .gitignore  CMakeLists.txt  DOCUMENTATION.md  README-md.md  README.md  SECURITY.md  cleanup.sh  compile.sh  issues  make.sh  notes  test.c  test_program.c
_include/libgcrypt/: Makefile.in
_include/tss2/tss2-esys/: tss2-esys.vcxproj
_include/tss2/tss2-mu/: tss2-mu.vcxproj
_include/tss2/tss2-rc/: tss2-rc.vcxproj
_include/tss2/tss2-sys/: tss2-sys.vcxproj
_include/tss2/tss2-tcti/: tss2-tcti-mssim.vcxproj  tss2-tcti-swtpm.vcxproj  tss2-tcti-tbs.vcxproj  tss2-tctildr.vcxproj
doc/: safeheap-documentation.wg  safeheap.html
include/: safeheap.h  sh_core.h  sh_crypto.h  sh_erasure.h  sh_error.h  sh_io.h  sh_malloc.h  sh_protect.h  sh_tpm.h  sh_utils.h
src/: sh_crypto.c  sh_erasure.c  sh_erasure.h  sh_error.c  sh_io.c  sh_malloc.c  sh_protect.c  sh_tpm.c
